# viewer-build-util

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: bump-major.yaml  ci.yaml  pre-commit.yaml
post-bugsplat-mac/: README.md  action.yaml
post-bugsplat-windows/: README.md  action.yaml
release-artifacts/: README.md  action.yaml  flatten_files.py
sign-pkg-mac/: README.md  action.yaml  retry_loop  sign.sh
sign-pkg-mac/installer/: apple-notarize.sh  dmg-cleanup.applescript  fix_application_icon_position.sh
sign-pkg-windows/: README.md  action.yaml  sign.py
sign-pkg-windows/sign/: action.yaml
sign-windows/: README.md  action.yaml
test/: sign_windows_test.py
viewerutil/: sign_windows.py
which-branch/: README.md  action.yaml  which_branch.py
